--- a/support-email-templates/SV_DP_GIFTEE_GIFT.html
+++ b/support-email-templates/SV_DP_GIFTEE_GIFT.html
@@ -57,9 +57,9 @@
     }
 
     @font-face {
-      font-family: 'Guardian Text Sans';
-      src: url('https://pasteup.guim.co.uk/webfonts/1.0.0/full-autohinted/GuardianTextSans-Regular.woff2') format('woff2');
-      font-weight: normal;
+      font-family: 'Guardian Text Sans Bold';
+      src: url('https://pasteup.guim.co.uk/webfonts/1.0.0/full-autohinted/GuardianTextSans-Bold.woff2') format('woff2');
+      font-weight: 700;
       font-style: normal;
     }
   </style>
@@ -161,7 +161,7 @@
                           <td style="padding-top: 16px;">
                             <table width="100%" border="0" cellspacing="0" cellpadding="0">
                               <tr>
-                                <td style="font-size:40px; line-height:40px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 16px 12px;">
+                                <td style="font-size:50px; line-height:56px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 16px 12px;">
                                   <strong>A gift for you from {{api_trigger_properties.${gifter_first_name}}}</strong>
                                 </td>
                               </tr>
@@ -172,7 +172,7 @@
                                 </td>
                               </tr>
                               <tr>
-                                <td style="font-size:16px; line-height:18px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 16px 12px;">
+                                <td style="font-size:21px; line-height:30px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 16px 12px;">
                                   {{api_trigger_properties.${gift_personal_message}}}
                                 </td>
                               </tr>
@@ -199,12 +199,12 @@
                             </td>
                           </tr>
                           <tr>
-                            <td style="font-size:20px; line-height:26px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#ffffff; padding: 16px 12px 0 12px;">
+                            <td style="font-size:21px; line-height:26px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#ffffff; padding: 16px 12px 0 12px;">
                               <strong>What&rsquo;s included?</strong>
                             </td>
                           </tr>
                           <tr>
-                            <td style="font-size:20px; line-height:26px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#ffffff; padding: 16px 12px 16px 12px;">
+                            <td style="font-size:21px; line-height:30px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#ffffff; padding: 16px 12px 16px 12px;">
                               <ul style="list-style: none; margin: 0; padding: 0;">
                                 <li style="padding-left: 20px; margin-bottom: 6px;">
                                   <div style="display: inline-block; border-radius: 6px; height: 12px; width: 12px; margin-right: 8px; margin-left: -20px; background-color: #ffe500;"></div>The Guardian Editions app
@@ -241,7 +241,7 @@
                                 </td>
                               </tr>
                               <tr>
-                                <td style="font-size:16px; line-height:18px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 16px 12px;">
+                                <td style="font-size:21px; line-height:30px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 16px 12px;">
                                   Simply click on the button below.
                                 </td>
                               </tr>
@@ -249,13 +249,13 @@
                                 <td style="padding: 0 12px 16px 12px;" align="left">
                                   <!-- Button -->
                                   <div>
-                                    <!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="https://support.theguardian.com/r/{{api_trigger_properties.${gift_code}}}" style="height:36px;v-text-anchor:middle;width:220px;" arcsize="50%" strokecolor="#ffe500" fillcolor="#ffe500"><w:anchorlock></w:anchorlock><center style="color:#000001;font-size:18px;"><strong style="font-family:'Guardian Text Sans', Arial, sans-serif">Redeem now<img src="https://cdn.braze.eu/appboy/communication/assets/image_assets/images/5f0715b598ed640ac74ab8ab/original.png?1594299829" valign="middle" style="vertical-align: middle;" width="18" height="18" border="0" alt=""></strong></center></v:roundrect><![endif]--><a href="https://support.theguardian.com/r/{{api_trigger_properties.${gift_code}}}" target="_blank" style="background-color:#ffe500; border-radius:25px; color:#052962; display:inline-block; font-size:18px; line-height:36px; text-align:center; text-decoration:none; font-weight:bold; min-width:90px; padding:0 10px; -webkit-text-size-adjust:none; white-space:nowrap; mso-hide:all;"><strong style="font-family:'Guardian Text Sans', Arial, sans-serif">Redeem now</strong>&nbsp;<img src="https://cdn.braze.eu/appboy/communication/assets/image_assets/images/5f0715b598ed640ac74ab8ab/original.png?1594299829" valign="middle" style="vertical-align: middle;" width="18" height="18" border="0" alt=""></a>
+                                    <!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="https://support.theguardian.com/r/{{api_trigger_properties.${gift_code}}}" style="height:36px;v-text-anchor:middle;width:220px;" arcsize="50%" strokecolor="#ffe500" fillcolor="#ffe500"><w:anchorlock></w:anchorlock><center style="color:#000001;font-size:17px;"><strong style="font-family:'Guardian Text Sans Bold', Arial, sans-serif">Redeem now<img src="https://cdn.braze.eu/appboy/communication/assets/image_assets/images/5f0715b598ed640ac74ab8ab/original.png?1594299829" valign="middle" style="vertical-align: middle;" width="18" height="18" border="0" alt=""></strong></center></v:roundrect><![endif]--><a href="https://support.theguardian.com/r/{{api_trigger_properties.${gift_code}}}" target="_blank" style="background-color:#ffe500; border-radius:25px; color:#052962; display:inline-block; font-size:17px; line-height:36px; text-align:center; text-decoration:none; font-weight:bold; min-width:90px; padding:0 10px; -webkit-text-size-adjust:none; white-space:nowrap; mso-hide:all;"><strong style="font-family:'Guardian Text Sans Bold', Arial, sans-serif">Redeem now</strong>&nbsp;<img src="https://cdn.braze.eu/appboy/communication/assets/image_assets/images/5f0715b598ed640ac74ab8ab/original.png?1594299829" valign="middle" style="vertical-align: middle;" width="18" height="18" border="0" alt=""></a>
                                   </div>
                                   <!-- END Button -->
                                 </td>
                               </tr>
                               <tr>
-                                <td style="font-size:16px; line-height:18px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 16px 12px;">
+                                <td style="font-size:21px; line-height:30px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 16px 12px;">
                                   If you need any more information, please visit our <a href="https://www.theguardian.com/info/2014/aug/06/guardian-observer-digital-subscriptions-faq" style="color: #052962"><u>help page</u></a>.
                                 </td>
                               </tr>
@@ -265,7 +265,7 @@
                                 </td>
                               </tr>
                               <tr>
-                                <td style="font-size:16px; line-height:18px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 16px 12px;">
+                                <td style="font-size:21px; line-height:30px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 16px 12px;">
                                   The gift is redeemable until <strong>{{api_trigger_properties.${last_redemption_date}}}</strong>
                                 </td>
                               </tr>
@@ -289,7 +289,7 @@
 
                   <!-- Footer -->
                   <tr>
-                    <td style="font-size:16px; line-height:18px; color:#000001; font-family:'GH Guardian Headline', Georgia, serif; text-align:center; padding: 12px;">
+                    <td style="font-size:21px; line-height:30px; color:#000001; font-family:'GH Guardian Headline', Georgia, serif; text-align:center; padding: 12px;">
                       <table border="0" cellpadding="0" cellspacing="0" width="100%" style="border-collapse: collapse; background-color: #ffffff; max-width: 600px;" bgcolor="#ffffff">
                         <tbody>
                           <tr>
