--- a/support-email-templates/SV_DP_Gifter_TY.html
+++ b/support-email-templates/SV_DP_Gifter_TY.html
@@ -263,7 +263,7 @@
                               </tr>
                               <tr>
                                 <td style="font-size:20px; line-height:24px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 16px 12px;">
-                                  <table cellspacing="0" width="100%" cellpadding="0" border="0" style="table-layout: fixed; margin: 0px; padding: 0px; text-decoration: none; font-size: 16px; font-family: Georgia; font-style: normal; font-weight: 400; line-height: 21px; color: #052962;">
+                                  <table cellspacing="0" width="100%" cellpadding="0" border="0" style="table-layout: fixed; margin: 0px; padding: 0px; text-decoration: none; font-size: 21px; line-height: 30px; font-family: Georgia; font-style: normal; font-weight: 400; color: #052962;">
                                     <tr style="font-size:21px; line-height:30px;">
                                       <td width="200" align="left" valign="top">
                                         Method
