--- a/support-email-templates/SV_DP_GIFTEE_GIFT.html
+++ b/support-email-templates/SV_DP_GIFTEE_GIFT.html
@@ -190,12 +190,12 @@
                         <tbody>
                           <tr>
                             <td style="font-size:34px; line-height:42px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#ffffff; padding: 16px 12px 0 12px;">
-                              <strong>The Guardian Digital Subscription</strong>
+                              <strong>The Guardian Digital Subscription &#47; {{api_trigger_properties.${duration}}}</strong>
                             </td>
                           </tr>
                           <tr>
                             <td class="fluid-img" style="font-size:0pt; line-height:0pt; text-align:left; padding-bottom: 16px;">
-                              <img src="https://cdn.braze.eu/appboy/communication/assets/image_assets/images/5f9196ecd57d054916985e72/original.png?1603376876" width="600" border="0" alt="">
+                              <img src="https://cdn.braze.eu/appboy/communication/assets/image_assets/images/5f9fd8663cf3a020371a4f09/original.png?1604311142" width="600" border="0" alt="">
                             </td>
                           </tr>
                           <tr>
