--- a/support-email-templates/SV_DP_GIFTEE_GIFT.html
+++ b/support-email-templates/SV_DP_GIFTEE_GIFT.html
@@ -173,7 +173,7 @@
                               </tr>
                               <tr>
                                 <td style="font-size:21px; line-height:30px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 16px 12px;">
-                                  {{api_trigger_properties.${gift_personal_message}}}
+                                  &quot;{{api_trigger_properties.${gift_personal_message}}}&quot;
                                 </td>
                               </tr>
                               {% endif %}
@@ -190,7 +190,7 @@
                         <tbody>
                           <tr>
                             <td style="font-size:34px; line-height:42px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#ffffff; padding: 16px 12px 0 12px;">
-                              <strong>The Guardian Digital Subscription &#47; {{api_trigger_properties.${duration}}}</strong>
+                              <strong>The Guardian Digital Subscription for {{api_trigger_properties.${duration}}}</strong>
                             </td>
                           </tr>
                           <tr>
