--- a/support-email-templates/SV_DP_GIFTEE_TY.html
+++ b/support-email-templates/SV_DP_GIFTEE_TY.html
@@ -278,20 +278,20 @@
                                       <td style="font-size:21px; line-height:30px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#ffffff; padding-bottom: 26px;">
                                         Experience The Guardian newspaper reimagined for mobile and tablet. Published daily and available to read by 6am (GMT).
 																				<br /><br />
-																				The Australia Weekend and the Environment special edition are all included in The Guardian Editions app as part of your subscription.
+																				The Australia Weekend is also included in The Guardian Editions app as part of your subscription.
                                       </td>
                                     </tr>
                                     {% elsif {{custom_attribute.${region}}} == 'Australia' %}
                                     <tr>
                                       <td style="font-size:34px; line-height:44px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#ffffff; padding-bottom: 16px;">
-                                        <strong>Download The Australia Weekend in the Guardian Editions app</strong>
+                                        <strong>Download Australia Weekend in the Guardian Editions app</strong>
                                       </td>
                                     </tr>
                                     <tr>
                                       <td style="font-size:21px; line-height:30px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#ffffff; padding-bottom: 26px;">
-                                        The Guardian&rsquo;s weekend newspaper reimagined for mobile and tablet. Published weekly, each edition available to read by 6am (AEST), every Saturday. The app allows you to download and read whenever it suits you.
+                                        Everything you need to make sense of the week, in one simple, elegant app. Published weekly, each edition available to read by 6am (AEST), every Saturday. The app allows you to download and read whenever it suits you.
 																				<br /><br />
-																				The UK Daily and the Environment special edition are also included as part of your subscription.
+																				The UK Daily is also included as part of your subscription.
                                       </td>
                                     </tr>
                                     {% elsif {{custom_attribute.${region}}} == 'United States' %}
@@ -302,7 +302,7 @@
                                     </tr>
                                     <tr>
                                       <td style="font-size:21px; line-height:30px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#ffffff; padding-bottom: 26px;">
-                                        Experience The Guardian newspaper reimagined for mobile and tablet. The UK Daily, Australia Weekend and the Environment special edition are all included as part of your subscription.
+                                        Everything you need to make sense of the week, in one simple, elegant app. The UK Daily and Australia edition are both included as part of your subscription.
                                       </td>
                                     </tr>
                                     {% else %}
@@ -315,7 +315,7 @@
                                       <td style="font-size:21px; line-height:30px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#ffffff; padding-bottom: 26px;">
                                         Experience The Guardian newspaper reimagined for mobile and tablet. Published daily and available to read by 6am (GMT).
 																				<br /><br />
-																				The Australia Weekend and the Environment special edition are all included in The Guardian Editions app as part of your subscription.
+																				The Australia Weekend is also included in The Guardian Editions app as part of your subscription.
                                       </td>
                                     </tr>
                                     {% endif %}
@@ -323,7 +323,7 @@
                                       <td style="padding-bottom: 32px;">
                                         <!-- Button -->
                                         <div>
-                                          <!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="https://editions.theguardian.com" style="height:40px;v-text-anchor:middle;width:160px;" arcsize="50%" strokecolor="#ffffff" fillcolor="#ffffff"><w:anchorlock></w:anchorlock><center style="color:#052962;font-family:'Guardian Text Sans Bold', Arial, sans-serif;font-size:17px;">Download The Guardian Editions app</center></v:roundrect><![endif]--><a href="https://editions.theguardian.com" target="_blank" style="background-color:#ffffff;border-radius:25px;color:#052962;display:inline-block;font-family:'Guardian Text Sans Bold', Arial, sans-serif;font-size:17px;line-height:40px;text-align:center;text-decoration:none;font-weight:bold;min-width:160px;padding:0 20px;-webkit-text-size-adjust:none;mso-hide:all;">Download the Editions app &nbsp;<img src="https://cdn.braze.eu/appboy/communication/assets/image_assets/images/5f0715b598ed640ac74ab8ab/original.png?1594299829" valign="middle" style="vertical-align: middle;" width="24" height="21" border="0" alt="" /></a>
+                                          <!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="https://editions.theguardian.com" style="height:40px;v-text-anchor:middle;width:160px;" arcsize="50%" strokecolor="#ffe500" fillcolor="#ffe500"><w:anchorlock></w:anchorlock><center style="color:#052962;font-family:'Guardian Text Sans Bold', Arial, sans-serif;font-size:17px;">Download The Guardian Editions app</center></v:roundrect><![endif]--><a href="https://editions.theguardian.com" target="_blank" style="background-color:#ffe500;border-radius:25px;color:#052962;display:inline-block;font-family:'Guardian Text Sans Bold', Arial, sans-serif;font-size:17px;line-height:40px;text-align:center;text-decoration:none;font-weight:bold;min-width:160px;padding:0 20px;-webkit-text-size-adjust:none;mso-hide:all;">Download the Editions app &nbsp;<img src="https://cdn.braze.eu/appboy/communication/assets/image_assets/images/5f0715b598ed640ac74ab8ab/original.png?1594299829" valign="middle" style="vertical-align: middle;" width="24" height="21" border="0" alt="" /></a>
                                         </div>
                                         <!-- END Button -->
                                       </td>
@@ -342,7 +342,7 @@
                                       <td style="padding-bottom: 16px;">
                                         <!-- Button -->
                                         <div>
-                                          <!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="https://apps.apple.com/gb/app/the-guardian/id409128287" style="height:40px;v-text-anchor:middle;width:160px;" arcsize="50%" strokecolor="#ffffff" fillcolor="#ffffff"><w:anchorlock></w:anchorlock><center style="color:#052962;font-family:'Guardian Text Sans Bold', Arial, sans-serif;font-size:18px;">Download the Live app for iOS</center></v:roundrect><![endif]--><a href="https://apps.apple.com/gb/app/the-guardian/id409128287" target="_blank" style="background-color:#ffffff;border-radius:25px;color:#052962;display:inline-block;font-family:'Guardian Text Sans Bold', Arial, sans-serif;font-size:17px;line-height:40px;text-align:center;text-decoration:none;font-weight:bold;min-width:160px;padding:0 20px;-webkit-text-size-adjust:none;mso-hide:all;">Download the Live app for iOS &nbsp;<img src="https://cdn.braze.eu/appboy/communication/assets/image_assets/images/5f0715b598ed640ac74ab8ab/original.png?1594299829" valign="middle" style="vertical-align: middle;" width="24" height="21" border="0" alt="" /></a>
+                                          <!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="https://apps.apple.com/gb/app/the-guardian/id409128287" style="height:40px;v-text-anchor:middle;width:160px;" arcsize="50%" strokecolor="#ffe500" fillcolor="#ffe500"><w:anchorlock></w:anchorlock><center style="color:#052962;font-family:'Guardian Text Sans Bold', Arial, sans-serif;font-size:18px;">Download the Live app for iOS</center></v:roundrect><![endif]--><a href="https://apps.apple.com/gb/app/the-guardian/id409128287" target="_blank" style="background-color:#ffe500;border-radius:25px;color:#052962;display:inline-block;font-family:'Guardian Text Sans Bold', Arial, sans-serif;font-size:17px;line-height:40px;text-align:center;text-decoration:none;font-weight:bold;min-width:160px;padding:0 20px;-webkit-text-size-adjust:none;mso-hide:all;">Download the Live app for iOS &nbsp;<img src="https://cdn.braze.eu/appboy/communication/assets/image_assets/images/5f0715b598ed640ac74ab8ab/original.png?1594299829" valign="middle" style="vertical-align: middle;" width="24" height="21" border="0" alt="" /></a>
                                         </div>
                                         <!-- END Button -->
                                       </td>
@@ -351,7 +351,7 @@
                                       <td style="padding-bottom: 32px;">
                                         <!-- Button -->
                                         <div>
-                                          <!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="https://play.google.com/store/apps/details?id=com.guardian" style="height:40px;v-text-anchor:middle;width:160px;" arcsize="50%" strokecolor="#ffffff" fillcolor="#ffffff"><w:anchorlock></w:anchorlock><center style="color:#052962;font-family:'Guardian Text Sans Bold', Arial, sans-serif;font-size:18px;">Download the Live app for Android</center></v:roundrect><![endif]--><a href="https://play.google.com/store/apps/details?id=com.guardian" target="_blank" style="background-color:#ffffff;border-radius:25px;color:#052962;display:inline-block;font-family:'Guardian Text Sans Bold', Arial, sans-serif;font-size:17px;line-height:40px;text-align:center;text-decoration:none;font-weight:bold;min-width:160px;padding:0 20px;-webkit-text-size-adjust:none;mso-hide:all;">Download the Live app for Android &nbsp;<img src="https://cdn.braze.eu/appboy/communication/assets/image_assets/images/5f0715b598ed640ac74ab8ab/original.png?1594299829" valign="middle" style="vertical-align: middle;" width="24" height="21" border="0" alt="" /></a>
+                                          <!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="https://play.google.com/store/apps/details?id=com.guardian" style="height:40px;v-text-anchor:middle;width:160px;" arcsize="50%" strokecolor="#ffe500" fillcolor="#ffe500"><w:anchorlock></w:anchorlock><center style="color:#052962;font-family:'Guardian Text Sans Bold', Arial, sans-serif;font-size:18px;">Download the Live app for Android</center></v:roundrect><![endif]--><a href="https://play.google.com/store/apps/details?id=com.guardian" target="_blank" style="background-color:#ffe500;border-radius:25px;color:#052962;display:inline-block;font-family:'Guardian Text Sans Bold', Arial, sans-serif;font-size:17px;line-height:40px;text-align:center;text-decoration:none;font-weight:bold;min-width:160px;padding:0 20px;-webkit-text-size-adjust:none;mso-hide:all;">Download the Live app for Android &nbsp;<img src="https://cdn.braze.eu/appboy/communication/assets/image_assets/images/5f0715b598ed640ac74ab8ab/original.png?1594299829" valign="middle" style="vertical-align: middle;" width="24" height="21" border="0" alt="" /></a>
                                         </div>
                                         <!-- END Button -->
                                       </td>
@@ -370,7 +370,7 @@
                                       <td style="padding-bottom: 32px;">
                                         <!-- Button -->
                                         <div>
-                                          <!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="https://www.theguardian.com/international" style="height:40px;v-text-anchor:middle;width:160px;" arcsize="50%" strokecolor="#ffffff" fillcolor="#ffffff"><w:anchorlock></w:anchorlock><center style="color:#052962;font-family:'Guardian Text Sans Bold', Arial, sans-serif;font-size:18px;">Sign into the website</center></v:roundrect><![endif]--><a href="https://profile.theguardian.com/signin" target="_blank" style="background-color:#ffffff;border-radius:25px;color:#052962;display:inline-block;font-family:'Guardian Text Sans Bold', Arial, sans-serif;font-size:17px;line-height:40px;text-align:center;text-decoration:none;font-weight:bold;min-width:160px;padding:0 20px;-webkit-text-size-adjust:none;mso-hide:all;">Sign into the website &nbsp;<img src="https://cdn.braze.eu/appboy/communication/assets/image_assets/images/5f0715b598ed640ac74ab8ab/original.png?1594299829" valign="middle" style="vertical-align: middle;" width="24" height="21" border="0" alt="" /></a>
+                                          <!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="https://www.theguardian.com/international" style="height:40px;v-text-anchor:middle;width:160px;" arcsize="50%" strokecolor="#ffe500" fillcolor="#ffe500"><w:anchorlock></w:anchorlock><center style="color:#052962;font-family:'Guardian Text Sans Bold', Arial, sans-serif;font-size:18px;">Sign into the website</center></v:roundrect><![endif]--><a href="https://profile.theguardian.com/signin" target="_blank" style="background-color:#ffe500;border-radius:25px;color:#052962;display:inline-block;font-family:'Guardian Text Sans Bold', Arial, sans-serif;font-size:17px;line-height:40px;text-align:center;text-decoration:none;font-weight:bold;min-width:160px;padding:0 20px;-webkit-text-size-adjust:none;mso-hide:all;">Sign into the website &nbsp;<img src="https://cdn.braze.eu/appboy/communication/assets/image_assets/images/5f0715b598ed640ac74ab8ab/original.png?1594299829" valign="middle" style="vertical-align: middle;" width="24" height="21" border="0" alt="" /></a>
                                         </div>
                                         <!-- END Button -->
                                       </td>
